CMF 2.0.1-beta (unreleased)

  Bug Fixes

    - CMFCore.FSDTMLMethod: Add class-default '_owner', to prevent unintended
      acquisition of ownership (http://www.zope.org/Collectors/CMF/450)

    - CMFCore.CatalogTool: Added 'cmf_uid' method to IndexableObjectWrapper
      so that CMFUid UIDs are not acquired during indexing.
      (http://www.zope.org/Collectors/CMF/446)

    - CMFCore.PortalContent:  '_guessAliases' may leave type information
      with a default alias of '(Default)';  work around that case.
      (http://www.zope.org/Collectors/CMF/445)

    - Forward-ported fix for DCWorkflow global actions missing IDs.
      (http://www.zope.org/Collectors/CMF/308)

    - CMFCore Expression: Fixed 'request' provided by expression contexts.
      'request' was not set correctly if 'object' is not specified.

    - CMFCore.exportimport.typeinfo:  Added BBB support for really old
      typeinfo instances which still return mappings instead of ActionInfos.

    - standard_error_message.pt was out of sync with Zope.
      (http://www.zope.org/Collectors/Zope/2133)


CMF 2.0.0 (2006/04/16)

  New Features

    - CMFCalendar.CalendarTool: The first day of the week preference can
      now be set on the calendar tool through the ZMI.
      (http://www.zope.org/Collectors/CMF/400)

    - CMFCalendar: Added experimental Zope 3-style browser views.
      The views are disabled by default. See README.txt of the browser
      sub-package for further information.

  Bug Fixes

    - IndexableObjectWrapper: Fixed list of provided interfaces.
      The interfaces declared for the wrapped object are no longer masked.

    - CMFDefault: Removed CMF specific slots from five_template.
      The CMF specific slots added in CMF 2.0.0-alpha have been removed again
      from the five_template.

  Others

    - CalendarTool: Slightly modified the behavior of getUseSession.
      This method now explicitly returns a boolean value.
